--- a/austin.sty
+++ b/austin.sty
@@ -60,8 +60,8 @@
 
 
 \DeclareMathOperator{\Mat}{Mat}
-\DeclareMathOperator{\GL}{GL}
-\DeclareMathOperator{\SL}{SL}
+% \DeclareMathOperator{\GL}{GL}
+% \DeclareMathOperator{\SL}{SL}
 \DeclareMathOperator{\PGL}{PGL}
 \DeclareMathOperator{\PSL}{PSL}
 % \DeclareMathOperator{\Tr}{Tr}
