--- a/physicsmain.tex
+++ b/physicsmain.tex
@@ -1,14 +1,13 @@
 \documentclass{report}
-\usepackage{physicsNotesTemplate}
-
+\usepackage{austin}
 % \graphicspath{ {Images/} }
-    \title{Physics Optics Notes}
+    \title{Physics Optics Notes }
 \author{Austin Wu} 
 \date{}
 
 \begin{document}
     \maketitle
-    \newpage
+    \newpage% or \cleardoublepage
     \tableofcontents \pagebreak 
     \chapter{Eric}
     Hello my name is eric 
