--- a/austin.sty
+++ b/austin.sty
@@ -1,26 +1,92 @@
-% Originally Rishi Gujjar Sty file
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{austin}
 
+% Austin
 \RequirePackage[margin=1in]{geometry}
-\RequirePackage{amsmath}
-\RequirePackage{amsthm}
-\RequirePackage{amsfonts}
-\RequirePackage{amssymb}
-\RequirePackage{graphicx}
-\RequirePackage{tikz}
-\RequirePackage{tikz-cd} 
-\RequirePackage{float}
-\RequirePackage[most,breakable]{tcolorbox}
-\RequirePackage{enumitem}
-\RequirePackage{hyperref}
-\RequirePackage{bbm}
-\RequirePackage{fancyhdr}
+% Physics
+% \RequirePackage[tmargin=2cm,rmargin=1in,lmargin=1in,margin=0.85in,bmargin=2cm,footskip=.2in]{geometry}
+
+% =======================
+% Math & Symbols
+% =======================
+\RequirePackage{amsmath, amsfonts, amssymb}
+\RequirePackage{mathtools}% extends amsmath
+\RequirePackage{bbm}% blackboard-bold 1
+% \RequirePackage[varbb]{newpxmath}% Times-style math + varbb
+\RequirePackage{xfrac}% \sfrac{}
 \RequirePackage{derivative}
+\RequirePackage{braket}% Dirac notation
+\RequirePackage{physics2}
+\usephysicsmodule{ab}
+
+% =======================
+% Graphics & Images
+% =======================
+\RequirePackage{graphicx}
+\RequirePackage{svg}%include external SVG (needs ­--shell-escape)
+% \RequirePackage{gensymb}% e.g. \degree
+
+% =======================
+% TikZ & Diagramming
+% =======================
+\RequirePackage{tikz}
+\RequirePackage{tikz-cd}
+\RequirePackage{tikzsymbols}
+\RequirePackage{tikzducks}
+
+% =======================
+% Color & Boxes
+% =======================
+\RequirePackage{xcolor}
+\RequirePackage[most, many, breakable]{tcolorbox}
+
+% =======================
+% Tables, Lists & Floats
+% =======================
+\RequirePackage{array}
+\RequirePackage{float}
+\RequirePackage{enumitem}
+
+% =======================
+% Code & Algorithms
+% =======================
 \RequirePackage{listings}
+\RequirePackage{algorithmic}
+\RequirePackage[ruled, vlined, linesnumbered]{algorithm2e}
+
+% =======================
+% References & Hyperlinks
+% =======================
+\RequirePackage{hyperref}
+\RequirePackage{bookmark} % faster bookmark handling
 \RequirePackage{natbib}
-% \RequirePackage{babel}
-% \RequirePackage{biblatex} %Imports biblatex package
+\RequirePackage{titletoc}
+\RequirePackage{nameref}
+\RequirePackage{theoremref}
+
+% =======================
+% Page Style
+% =======================
+\RequirePackage{fancyhdr}
+
+% =======================
+% Utilities
+% =======================
+\RequirePackage{varwidth}
+\RequirePackage{etoolbox}
+\RequirePackage{xifthen}
+\RequirePackage{import}
+% \RequirePackage{pdfpages} % insert external PDFs
+\RequirePackage{transparent} % change opacity
+\RequirePackage{comment}
+\RequirePackage{cancel}
+\usepackage{xparse} % For handling multiple optional arguments
+% =======================
+% Author & Affiliation
+% =======================
+% \RequirePackage{authblk}
+
+% Header information
 \title{}
 \makeatletter
 \@ifclassloaded{amsart}{
@@ -33,16 +99,85 @@
 \setlength{\footskip}{14.0pt}    % Fix for footskip warning
 \lhead{Austin Wu (amw423)}
 
+% \definecolor{doc}{RGB}{0,60,110}
+%
+% \hypersetup{
+% 	pdftitle={Assignment},
+% 	colorlinks=true, linkcolor=doc!90,
+% 	bookmarksnumbered=true,
+% 	bookmarksopen=true
+% }
+
+%------------
+% env.sty
+%------------
+
+% Colors
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codeorange}{rgb}{1,0.49,0}
+\definecolor{codered}{rgb}{1, 0, 0}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.96}
+\definecolor{myg}{RGB}{56, 140, 70}
+\definecolor{myb}{RGB}{45, 111, 177}
+\definecolor{myr}{RGB}{199, 68, 64}
+\definecolor{mytheorembg}{HTML}{F2F2F9}
+\definecolor{mytheoremfr}{HTML}{00007B}
+\definecolor{mylenmabg}{HTML}{FFFAF8}
+\definecolor{mylenmafr}{HTML}{983b0f}
+\definecolor{mypropbg}{HTML}{f2fbfc}
+\definecolor{mypropfr}{HTML}{191971}
+\definecolor{myexamplebg}{HTML}{F2FBF8}
+\definecolor{myexamplefr}{HTML}{88D6D1}
+\definecolor{myexampleti}{HTML}{2A7F7F}
+\definecolor{mydefinitbg}{HTML}{E5E5FF}
+\definecolor{mydefinitfr}{HTML}{3F3FA3}
+\definecolor{notesgreen}{RGB}{0,162,0}
+\definecolor{myp}{RGB}{197, 92, 212}
+\definecolor{mygr}{HTML}{2C3338}
+\definecolor{myred}{RGB}{127,0,0}
+\definecolor{myyellow}{RGB}{169,121,69}
+\definecolor{myexercisebg}{HTML}{F2FBF8}
+\definecolor{myexercisefg}{HTML}{88D6D1}
+
+
+\definecolor{subproblemcolor}{RGB}{0,163,243}
+
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegray},
+    keywordstyle=\color{codeorange},
+    numberstyle=\tiny\color{codegray},
+    % identifierstyle=\color{codered},
+    stringstyle=\color{codegreen},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2,
+    xleftmargin=10pt,
+}
+\lstset{style=mystyle}
+
+%---------------
+% Macros
+%---------------
+
+% Math operators
 \DeclareMathOperator{\cis}{cis}
 \DeclareMathOperator{\lcm}{lcm}
 \DeclareMathOperator{\ord}{ord}
 \DeclareMathOperator{\Span}{span}
 \DeclareMathOperator{\Id}{Id}
 \DeclareMathOperator{\img}{img}
-
 \DeclareMathOperator{\vol}{vol}
 \DeclareMathOperator{\sgn}{sgn}
-
 % \DeclareMathOperator{\arcsec}{arcsec}
 % \DeclareMathOperator{\arccsc}{arccsc}
 % \DeclareMathOperator{\arccot}{arccot}
@@ -52,13 +187,9 @@
 \DeclareMathOperator{\arsech}{arsech}
 \DeclareMathOperator{\arcsch}{arcsech}
 \DeclareMathOperator{\arcoth}{arcoth}
-
-
 \DeclareMathOperator{\1}{\mathbbm{1}}
 % \DeclareMathOperator{\grad}{grad}
 \DeclareMathOperator{\dR}{dR}
-
-
 \DeclareMathOperator{\Mat}{Mat}
 % \DeclareMathOperator{\GL}{GL}
 % \DeclareMathOperator{\SL}{SL}
@@ -66,7 +197,6 @@
 \DeclareMathOperator{\PSL}{PSL}
 % \DeclareMathOperator{\Tr}{Tr}
 \DeclareMathOperator{\Irr}{Irr}
-
 \DeclareMathOperator{\Zp}{\Z/p\Z}
 
 \DeclareMathOperator{\cl}{cl}
@@ -76,16 +206,14 @@
 \DeclareMathOperator{\Out}{Out}
 \DeclareMathOperator{\Stab}{Stab}
 
-
-
 \DeclareMathOperator{\supp}{supp}
 \DeclareMathOperator{\argmin}{argmin}
 \DeclareMathOperator{\argmax}{argmax}
 
 \DeclareMathOperator{\Obj}{Obj}
-\DeclareMathOperator{\Top}{Top}
+% \DeclareMathOperator{\Top}{Top}
 \DeclareMathOperator{\Hom}{Hom}
-\DeclareMathOperator{\Set}{Set}
+% \DeclareMathOperator{\Set}{Set}
 \DeclareMathOperator{\Grp}{Grp}
 \DeclareMathOperator{\Ab}{Ab}
 \DeclareMathOperator{\Ring}{Ring}
@@ -98,32 +226,19 @@
 \DeclareMathOperator{\Man}{Man}
 \DeclareMathOperator{\Diff}{Diff}
 
+\DeclareMathOperator*{\expect}{\mathbb{E}}
 
-\newcommand{\coloneq}{\mathrel{\vcenter{\baselineskip0.5ex \lineskiplimit0pt\hbox{\scriptsize.}\hbox{\scriptsize.}}}=}
+% New commands
+% \renewcommand{\coloneq}{\mathrel{\vcenter{\baselineskip0.5ex \lineskiplimit0pt\hbox{\scriptsize.}\hbox{\scriptsize.}}}=}
 \newcommand{\notimplies}{\;\not\!\!\!\implies}
 \newcommand{\cbrt}[1]{\sqrt[3]{#1}}
 \newcommand{\floor}[1]{\left\lfloor #1 \right\rfloor}
 \newcommand{\ceil}[1]{\left\lceil #1 \right\rceil}
 
-\newcommand{\deriv}[2]{\frac{\mathrm{d}{#1}}{\mathrm{d}{#2}}}
-\newcommand{\pderiv}[2]{\frac{\partial{#1}}{\partial{#2}}}
-\newcommand{\diff}[1]{\,\mathrm{d}{#1}}
-\newcommand{\pdiff}[2]{\partial{#1}}
-% \newcommand{\dd}[1]{\deriv{}{#1}}
-\newcommand{\pdd}[1]{\pderiv{}{#1}}
-
-\newcommand{\ddn}[2]{\frac{\mathrm{d}}{\mathrm{d}{#2}^{#1}}}
-\newcommand{\pddn}[2]{\frac{\partial^{#1}}{\partial{#2}^{#1}}}
-
 \newcommand{\intab}[1]{\int_a^b{#1}}
 \newcommand{\intrn}[1]{\int_{\mathbb{R}^n}{#1}}
 \newcommand{\intg}[1]{\int_{\gamma}{#1}}
 \newcommand{\intinf}[1]{\int_{-\infty}^{\infty}{#1}}
-
-
-
-\newcommand{\bmat}[1]{\begin{bmatrix}#1\end{bmatrix}}
-% \newcommand{\pmat}[1]{\begin{pmatrix}#1\end{pmatrix}}
 
 \newcommand{\Bern}[1]{\text{Bern}\left(#1\right)}
 \newcommand{\Geom}[1]{\text{Geom}\left(#1\right)}
@@ -139,6 +254,32 @@
 \newcommand{\semi}{\ltimes}
 \newcommand{\acts}{\,\ensuremath{\rotatebox[origin=c]{-90}{$\circlearrowright$}}\,}
 
+\newcommand{\fr}[2]{\frac{#1}{#2}}
+\newcommand{\bb}[1]{\boxed{#1}}
+\newcommand{\cd}{\cdot}
+\newcommand{\der}{\degree}
+\newcommand{\T}[1]{\text{#1}}
+\newcommand{\Ts}[1]{\text{ #1 }}
+\newcommand{\st}{\ \text{s.t.} \ }
+\newcommand{\lat}{\mathcal{L}}
+
+\renewcommand{\b}[1]{\ifmmode\mathbf{#1}\else\textbf{#1}\fi}
+\newcommand{\im}{\operatorname{im}}
+
+\newcommand{\V}[1]{\begin{bmatrix}#1\end{bmatrix}}
+\renewcommand{\det}[1]{\begin{vmatrix}#1\end{vmatrix}}
+\newcommand{\pV}[1]{\begin{pmatrix}#1\end{pmatrix}}
+
+%\renewcommand\qedsymbol{$\Laughey$}
+
+
+\RenewDocumentCommand{\det}{o}{%
+  \IfNoValueTF{#1}
+    {\operatorname{det}}        % no argument: just "det"
+    {\operatorname{det}\left(#1\right)}  % with argument: "det(...)"
+}
+
+% Symbol Shortcuts
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\F}{\mathbb{F}}
 \newcommand{\N}{\mathbb{N}}
@@ -164,11 +305,60 @@
 \newcommand{\ii}{\mathbf{i}}
 \newcommand{\jj}{\mathbf{j}}
 \newcommand{\kk}{\mathbf{k}}
-
 \newcommand{\ext}{\mathbf{d}}
 % \newcommand{\op}{^{\text{op}}}
-
 \newcommand{\bv}[1]{\mathbf{#1}}
+\newcommand{\ExS}[2]{\mathbb{E}_{#1}{\left[#2\right]}}
+
+% Source Code lines
+\SetCommentSty{mycommfont}
+\newcommand{\incfig}[1]{%
+    \def\svgwidth{\columnwidth}
+    \import{./figures/}{#1.pdf_tex}
+}
+
+\renewcommand\lstlistingname{Source Code}
+\renewcommand\lstlistlistingname{Source Code}
+\newcommand\mycommfont[1]{\footnotesize\ttfamily\textcolor{blue}{#1}}
+
+
+%------------------
+% Enviroment specific definitions:
+%------------------
+% Requestable enviroments:
+% Austin Env, mostly for psets and misc things
+% Physical review B enviroments
+% Book Enviroment for longer pieces
+
+\makeatletter % Essential for using @ commands
+
+%------------------
+% Per enviroment
+% Line below everything else
+%------------------
+
+
+% --- Definitions for Enviroment 'revtex4-2' (Physical Review B) ---
+\@ifclassloaded{revtex4-2}{
+
+  \newcommand{\qedsymbol}{\blacksquare}
+  \newtheorem{theorem}{Theorem}[section]
+  \newtheorem{lemma}[theorem]{Lemma}
+  \newtheorem{corollary}[theorem]{Corollary}
+  \newtheorem{proposition}[theorem]{Proposition}
+  \newtheorem{definition}[theorem]{Definition}
+  \newtheorem{remark}[theorem]{Remark}
+  \newtheorem{example}[theorem]{Example}
+}{% Optional: Code to execute if revtex4-2 is NOT loaded (leave empty if not needed) 
+}
+
+
+% --- Definitions for Enviroment 'amsart' ---
+\@ifclassloaded{amsart}{%
+
+\renewcommand{\qedsymbol}{\begin{tikzpicture}
+    \duck[tophat, bowtie, scale = .2]
+\end{tikzpicture}}
 
 \newcounter{theoremcntr}
 \newcounter{problemcntr}
@@ -345,60 +535,6 @@
     \vspace{1em} % Small space after title
     }{\par}
 
-% FOR PHYSREVB
-% % (or, if you don’t want italics bodies, add \theoremstyle{definition} before these)
-% \newtheorem{theorem}{Theorem}[section]
-% \newtheorem{lemma}[theorem]{Lemma}
-% \newtheorem{corollary}[theorem]{Corollary}
-% \newtheorem{proposition}[theorem]{Proposition}
-% \newtheorem{definition}[theorem]{Definition}
-% \newtheorem{remark}[theorem]{Remark}
-% \newtheorem{example}[theorem]{Example}
-% Austin Additions
-
-
-\RequirePackage{physics2}
-\usephysicsmodule{ab}
-
-\newcommand{\V}[1]{\begin{bmatrix}#1\end{bmatrix}}
-\renewcommand{\det}[1]{\begin{vmatrix}#1\end{vmatrix}}
-\newcommand{\pV}[1]{\begin{pmatrix}#1\end{pmatrix}}
-
-\newcommand{\fr}[2]{\frac{#1}{#2}}
-\newcommand{\bb}[1]{\boxed{#1}}
-\newcommand{\cd}{\cdot}
-\newcommand{\der}{\degree}
-\newcommand{\T}[1]{\text{#1}}
-\newcommand{\Ts}[1]{\text{ #1 }}
-\newcommand{\st}{\ \text{s.t.} \ }
-\newcommand{\lat}{\mathcal{L}}
-\DeclareMathOperator*{\expect}{\mathbb{E}}
-\DeclareMathOperator{\GL}{GL} % General linear group
-\DeclareMathOperator{\SL}{SL} % Special linear group
-% \newcommand{\wlog}{\ \text{wlog}\ }
-
-\usepackage{xcolor}
-\definecolor{codegreen}{rgb}{0,0.6,0}
-\definecolor{codegray}{rgb}{0.5,0.5,0.5}
-\definecolor{codeorange}{rgb}{1,0.49,0}
-\definecolor{codered}{rgb}{1, 0, 0}
-\definecolor{backcolour}{rgb}{0.95,0.95,0.96}
-% \newcommand{\floor}[1]{\lfloor #1 \rfloor}
-% \newcommand{\ceil}[1]{\lceil #1 \rceil}
-
-
-\newcommand{\ExS}[2]{\mathbb{E}_{#1}{\left[#2\right]}}
-
-\RequirePackage{tikzducks}
-%\renewcommand{\qedsymbol}{$\blacksquare$}
-\renewcommand{\qedsymbol}{\begin{tikzpicture}
-    \duck[tophat, bowtie, scale = .2]
-\end{tikzpicture}}
-
-
-% Subproblem Box
-\usepackage{xparse} % For handling multiple optional arguments
-
 % Define a new counter for subproblems
 \newcounter{subproblem}[problemcntr]
 
@@ -420,71 +556,631 @@
     before upper={\setcounter{subproblem}{1}}
 }
 
-\definecolor{subproblemcolor}{RGB}{0,163,243}
-
-%\definecolor{subproblemcolor}{myblue}
-
-% Define a new environment for the subproblem box with two optional arguments
+% Subproblem box environment
 \NewDocumentEnvironment{subproblem}{o o}{%
-    \stepcounter{subproblem} % Increment the subproblem counter
+    \stepcounter{subproblem} 
     \vspace{0.5cm} % Space before subproblem
-    \noindent % No indentation
-    \IfNoValueTF{#1}{%
-        % If no custom title is provided, use "Subproblem a:"
-        \def\subproblemboxtitle{\thesubproblem:}%
-    }{%
-        % If a custom title is provided, check if it's empty
-        \if\relax\detokenize{#1}\relax%
-            % If the custom title is empty, use "Subproblem a:"
-            \def\subproblemboxtitle{\thesubproblem:}%
-        \else%
-            % If the custom title is not empty, use "Subproblem a - Title:"
+    \noindent 
+    \IfNoValueTF{#1}{
+        \def\subproblemboxtitle{\thesubproblem:}% If no custom title is provided, use "Subproblem a:"
+    }{
+        \if\relax\detokenize{#1}\relax% If a custom title is provided, check if it's empty
+            \def\subproblemboxtitle{\thesubproblem:}% If the custom title is empty, use "Subproblem a:"
+        \else% If the custom title is not empty, use "Subproblem a - Title:"
           \def\subproblemboxtitle{\textbf{\thesubproblem:}\begin{tcolorbox}[enhanced]#1\end{tcolorbox}}%
-        \fi%
-    }%
-    \IfNoValueTF{#2}{%
-        % If no reference is provided, don't add a label
-        \begin{tcolorbox}[
-            breakable,
-            colback= subproblemcolor!5!white,
-            colframe=subproblemcolor!75!black,
-            fonttitle=\bfseries,
-            title=\subproblemboxtitle,
-            arc=0mm,
-            boxrule=0.5mm,
-            left=2mm,
-            right=2mm,
-            top=2mm,
-            bottom=2mm
-        ]
-    }{%
-        % If a reference is provided, add the label
-        \begin{tcolorbox}[
-            breakable,
-            colback=subproblemcolor!5!white,
-            colframe=subproblemcolor!75!black,
-            fonttitle=\bfseries,
-            title=\subproblemboxtitle,
-            arc=0mm,
-            boxrule=0.5mm,
-            left=2mm,
-            right=2mm,
-            top=2mm,
-            bottom=2mm,
-            after title={\label{#2}} % Add the label after the title
-        ]
-    }%
-}{%
-    \end{tcolorbox}%
+        \fi
+    }
+    \IfNoValueTF{#2}{% If no reference is provided, don't add a label
+        \begin{tcolorbox}[ breakable, colback= subproblemcolor!5!white, colframe=subproblemcolor!75!black, fonttitle=\bfseries, title=\subproblemboxtitle, arc=0mm, boxrule=0.5mm, left=2mm, right=2mm, top=2mm, bottom=2mm ]
+    }{% If a reference is provided, add the label
+        \begin{tcolorbox}[ breakable, colback=subproblemcolor!5!white, colframe=subproblemcolor!75!black, fonttitle=\bfseries, title=\subproblemboxtitle, arc=0mm, boxrule=0.5mm, left=2mm, right=2mm, top=2mm, bottom=2mm, after title={\label{#2}} % Add the label after the title ]
+    }
+}{\end{tcolorbox}}
+
+}{% Optional: Code to execute if amsart is NOT loaded 
+}
+
+% --- Definitions for 'report' ---
+\@ifclassloaded{report}{%
+
+\newcommand{\qedsymbol}{\begin{tikzpicture}
+    \duck[tophat, bowtie, scale = .2]
+\end{tikzpicture}}
+
+
+\setlength{\parindent}{1cm}
+%================================
+% THEOREM BOX
+%================================
+
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=section]{Theorem}{Theorem}
+{%
+	enhanced,
+	breakable,
+	colback = mytheorembg,
+	frame hidden,
+	boxrule = 0sp,
+	borderline west = {2pt}{0pt}{mytheoremfr},
+	sharp corners,
+	detach title,
+	before upper = \tcbtitle\par\smallskip,
+	coltitle = mytheoremfr,
+	fonttitle = \bfseries\sffamily,
+	description font = \mdseries,
+	separator sign none,
+	segmentation style={solid, mytheoremfr},
+}
+{th}
+
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=chapter]{theorem}{Theorem}
+{%
+	enhanced,
+	breakable,
+	colback = mytheorembg,
+	frame hidden,
+	boxrule = 0sp,
+	borderline west = {2pt}{0pt}{mytheoremfr},
+	sharp corners,
+	detach title,
+	before upper = \tcbtitle\par\smallskip,
+	coltitle = mytheoremfr,
+	fonttitle = \bfseries\sffamily,
+	description font = \mdseries,
+	separator sign none,
+	segmentation style={solid, mytheoremfr},
+}
+{th}
+
+
+\tcbuselibrary{theorems,skins,hooks}
+\newtcolorbox{Theoremcon}
+{%
+	enhanced
+	,breakable
+	,colback = mytheorembg
+	,frame hidden
+	,boxrule = 0sp
+	,borderline west = {2pt}{0pt}{mytheoremfr}
+	,sharp corners
+	,description font = \mdseries
+	,separator sign none
+}
+
+%================================
+% Corollery
+%================================
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=section]{Corollary}{Corollary}
+{%
+	enhanced
+	,breakable
+	,colback = myp!10
+	,frame hidden
+	,boxrule = 0sp
+	,borderline west = {2pt}{0pt}{myp!85!black}
+	,sharp corners
+	,detach title
+	,before upper = \tcbtitle\par\smallskip
+	,coltitle = myp!85!black
+	,fonttitle = \bfseries\sffamily
+	,description font = \mdseries
+	,separator sign none
+	,segmentation style={solid, myp!85!black}
+}
+{th}
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=chapter]{corollary}{Corollary}
+{%
+	enhanced
+	,breakable
+	,colback = myp!10
+	,frame hidden
+	,boxrule = 0sp
+	,borderline west = {2pt}{0pt}{myp!85!black}
+	,sharp corners
+	,detach title
+	,before upper = \tcbtitle\par\smallskip
+	,coltitle = myp!85!black
+	,fonttitle = \bfseries\sffamily
+	,description font = \mdseries
+	,separator sign none
+	,segmentation style={solid, myp!85!black}
+}
+{th}
+
+
+%================================
+% LENMA
+%================================
+
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=section]{Lenma}{Lenma}
+{%
+	enhanced,
+	breakable,
+	colback = mylenmabg,
+	frame hidden,
+	boxrule = 0sp,
+	borderline west = {2pt}{0pt}{mylenmafr},
+	sharp corners,
+	detach title,
+	before upper = \tcbtitle\par\smallskip,
+	coltitle = mylenmafr,
+	fonttitle = \bfseries\sffamily,
+	description font = \mdseries,
+	separator sign none,
+	segmentation style={solid, mylenmafr},
+}
+{th}
+
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=chapter]{lenma}{Lenma}
+{%
+	enhanced,
+	breakable,
+	colback = mylenmabg,
+	frame hidden,
+	boxrule = 0sp,
+	borderline west = {2pt}{0pt}{mylenmafr},
+	sharp corners,
+	detach title,
+	before upper = \tcbtitle\par\smallskip,
+	coltitle = mylenmafr,
+	fonttitle = \bfseries\sffamily,
+	description font = \mdseries,
+	separator sign none,
+	segmentation style={solid, mylenmafr},
+}
+{th}
+
+
+%================================
+% PROPOSITION
+%================================
+
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=section]{Prop}{Proposition}
+{%
+	enhanced,
+	breakable,
+	colback = mypropbg,
+	frame hidden,
+	boxrule = 0sp,
+	borderline west = {2pt}{0pt}{mypropfr},
+	sharp corners,
+	detach title,
+	before upper = \tcbtitle\par\smallskip,
+	coltitle = mypropfr,
+	fonttitle = \bfseries\sffamily,
+	description font = \mdseries,
+	separator sign none,
+	segmentation style={solid, mypropfr},
+}
+{th}
+
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=chapter]{prop}{Proposition}
+{%
+	enhanced,
+	breakable,
+	colback = mypropbg,
+	frame hidden,
+	boxrule = 0sp,
+	borderline west = {2pt}{0pt}{mypropfr},
+	sharp corners,
+	detach title,
+	before upper = \tcbtitle\par\smallskip,
+	coltitle = mypropfr,
+	fonttitle = \bfseries\sffamily,
+	description font = \mdseries,
+	separator sign none,
+	segmentation style={solid, mypropfr},
+}
+{th}
+
+
+%================================
+% CLAIM
+%================================
+
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=section]{claim}{Claim}
+{%
+	enhanced
+	,breakable
+	,colback = myg!10
+	,frame hidden
+	,boxrule = 0sp
+	,borderline west = {2pt}{0pt}{myg}
+	,sharp corners
+	,detach title
+	,before upper = \tcbtitle\par\smallskip
+	,coltitle = myg!85!black
+	,fonttitle = \bfseries\sffamily
+	,description font = \mdseries
+	,separator sign none
+	,segmentation style={solid, myg!85!black}
+}
+{th}
+
+
+
+%================================
+% Exercise
+%================================
+
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=section]{Exercise}{Exercise}
+{%
+	enhanced,
+	breakable,
+	colback = myexercisebg,
+	frame hidden,
+	boxrule = 0sp,
+	borderline west = {2pt}{0pt}{myexercisefg},
+	sharp corners,
+	detach title,
+	before upper = \tcbtitle\par\smallskip,
+	coltitle = myexercisefg,
+	fonttitle = \bfseries\sffamily,
+	description font = \mdseries,
+	separator sign none,
+	segmentation style={solid, myexercisefg},
+}
+{th}
+
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=chapter]{exercise}{Exercise}
+{%
+	enhanced,
+	breakable,
+	colback = myexercisebg,
+	frame hidden,
+	boxrule = 0sp,
+	borderline west = {2pt}{0pt}{myexercisefg},
+	sharp corners,
+	detach title,
+	before upper = \tcbtitle\par\smallskip,
+	coltitle = myexercisefg,
+	fonttitle = \bfseries\sffamily,
+	description font = \mdseries,
+	separator sign none,
+	segmentation style={solid, myexercisefg},
+}
+{th}
+
+%================================
+% EXAMPLE BOX
+%================================
+
+\newtcbtheorem[number within=section]{Example}{Example}
+{%
+	colback = myexamplebg
+	,breakable
+	,colframe = myexamplefr
+	,coltitle = myexampleti
+	,boxrule = 1pt
+	,sharp corners
+	,detach title
+	,before upper=\tcbtitle\par\smallskip
+	,fonttitle = \bfseries
+	,description font = \mdseries
+	,separator sign none
+	,description delimiters parenthesis
+}
+{ex}
+
+\newtcbtheorem[number within=chapter]{example}{Example}
+{%
+	colback = myexamplebg
+	,breakable
+	,colframe = myexamplefr
+	,coltitle = myexampleti
+	,boxrule = 1pt
+	,sharp corners
+	,detach title
+	,before upper=\tcbtitle\par\smallskip
+	,fonttitle = \bfseries
+	,description font = \mdseries
+	,separator sign none
+	,description delimiters parenthesis
+}
+{ex}
+
+%================================
+% DEFINITION BOX
+%================================
+
+\newtcbtheorem[number within=section]{Definition}{Definition}{enhanced,
+	before skip=2mm,after skip=2mm, colback=red!5,colframe=red!80!black,boxrule=0.5mm,
+	attach boxed title to top left={xshift=1cm,yshift*=1mm-\tcboxedtitleheight}, varwidth boxed title*=-3cm,
+	boxed title style={frame code={
+					\path[fill=tcbcolback]
+					([yshift=-1mm,xshift=-1mm]frame.north west)
+					arc[start angle=0,end angle=180,radius=1mm]
+					([yshift=-1mm,xshift=1mm]frame.north east)
+					arc[start angle=180,end angle=0,radius=1mm];
+					\path[left color=tcbcolback!60!black,right color=tcbcolback!60!black,
+						middle color=tcbcolback!80!black]
+					([xshift=-2mm]frame.north west) -- ([xshift=2mm]frame.north east)
+					[rounded corners=1mm]-- ([xshift=1mm,yshift=-1mm]frame.north east)
+					-- (frame.south east) -- (frame.south west)
+					-- ([xshift=-1mm,yshift=-1mm]frame.north west)
+					[sharp corners]-- cycle;
+				},interior engine=empty,
+		},
+	fonttitle=\bfseries,
+	title={#2},#1}{def}
+\newtcbtheorem[number within=chapter]{definition}{Definition}{enhanced,
+	before skip=2mm,after skip=2mm, colback=red!5,colframe=red!80!black,boxrule=0.5mm,
+	attach boxed title to top left={xshift=1cm,yshift*=1mm-\tcboxedtitleheight}, varwidth boxed title*=-3cm,
+	boxed title style={frame code={
+					\path[fill=tcbcolback]
+					([yshift=-1mm,xshift=-1mm]frame.north west)
+					arc[start angle=0,end angle=180,radius=1mm]
+					([yshift=-1mm,xshift=1mm]frame.north east)
+					arc[start angle=180,end angle=0,radius=1mm];
+					\path[left color=tcbcolback!60!black,right color=tcbcolback!60!black,
+						middle color=tcbcolback!80!black]
+					([xshift=-2mm]frame.north west) -- ([xshift=2mm]frame.north east)
+					[rounded corners=1mm]-- ([xshift=1mm,yshift=-1mm]frame.north east)
+					-- (frame.south east) -- (frame.south west)
+					-- ([xshift=-1mm,yshift=-1mm]frame.north west)
+					[sharp corners]-- cycle;
+				},interior engine=empty,
+		},
+	fonttitle=\bfseries,
+	title={#2},#1}{def}
+
+%================================
+% Question BOX
+%================================
+
+\makeatletter
+\newtcbtheorem{question}{Question}{enhanced,
+	breakable,
+	colback=white,
+	colframe=myb!80!black,
+	attach boxed title to top left={yshift*=-\tcboxedtitleheight},
+	fonttitle=\bfseries,
+	title={#2},
+	boxed title size=title,
+	boxed title style={%
+			sharp corners,
+			rounded corners=northwest,
+			colback=tcbcolframe,
+			boxrule=0pt,
+		},
+	underlay boxed title={%
+			\path[fill=tcbcolframe] (title.south west)--(title.south east)
+			to[out=0, in=180] ([xshift=5mm]title.east)--
+			(title.center-|frame.east)
+			[rounded corners=\kvtcb@arc] |-
+			(frame.north) -| cycle;
+		},
+	#1
+}{def}
+\makeatother
+
+\makeatletter
+\newtcbtheorem{subquestion}{Subsection}{enhanced,
+	breakable,
+	colback=white,
+	colframe=myr!80!black,
+	attach boxed title to top left={yshift*=-\tcboxedtitleheight},
+	fonttitle=\bfseries,
+	title={#1},
+	boxed title size=title,
+	boxed title style={%
+			sharp corners,
+			rounded corners=northwest,
+			colback=tcbcolframe,
+			boxrule=0pt,
+		},
+	underlay boxed title={%
+			\path[fill=tcbcolframe] (title.south west)--(title.south east)
+			to[out=0, in=180] ([xshift=5mm]title.east)--
+			(title.center-|frame.east)
+			[rounded corners=\kvtcb@arc] |-
+			(frame.north) -| cycle;
+		},
+	#1
+}{def}
+\makeatother
+
+\newtcbtheorem[number within=chapter]{wconc}{Wrong Concept}{
+	breakable,
+	enhanced,
+	colback=white,
+	colframe=myr,
+	arc=0pt,
+	outer arc=0pt,
+	fonttitle=\bfseries\sffamily\large,
+	colbacktitle=myr,
+	attach boxed title to top left={},
+	boxed title style={
+			enhanced,
+			skin=enhancedfirst jigsaw,
+			arc=3pt,
+			bottom=0pt,
+			interior style={fill=myr}
+		},
+	#1
+}{def}
+
+%================================
+% NOTE BOX
+%================================
+
+\usetikzlibrary{arrows,calc,shadows.blur}
+\tcbuselibrary{skins}
+\newtcolorbox{note}[1][]{%
+	enhanced jigsaw,
+	colback=gray!20!white,%
+	colframe=gray!80!black,
+	size=small,
+	boxrule=1pt,
+	title=\textbf{Note:-},
+	halign title=flush center,
+	coltitle=black,
+	breakable,
+	drop shadow=black!50!white,
+	attach boxed title to top left={xshift=1cm,yshift=-\tcboxedtitleheight/2,yshifttext=-\tcboxedtitleheight/2},
+	minipage boxed title=1.5cm,
+	boxed title style={%
+			colback=white,
+			size=fbox,
+			boxrule=1pt,
+			boxsep=2pt,
+			underlay={%
+					\coordinate (dotA) at ($(interior.west) + (-0.5pt,0)$);
+					\coordinate (dotB) at ($(interior.east) + (0.5pt,0)$);
+					\begin{scope}
+						\clip (interior.north west) rectangle ([xshift=3ex]interior.east);
+						\filldraw [white, blur shadow={shadow opacity=60, shadow yshift=-.75ex}, rounded corners=2pt] (interior.north west) rectangle (interior.south east);
+					\end{scope}
+					\begin{scope}[gray!80!black]
+						\fill (dotA) circle (2pt);
+						\fill (dotB) circle (2pt);
+					\end{scope}
+				},
+		},
+	#1,
 }
 
 
-\RenewDocumentCommand{\det}{o}{%
-  \IfNoValueTF{#1}
-    {\operatorname{det}}        % no argument: just "det"
-    {\operatorname{det}\left(#1\right)}  % with argument: "det(...)"
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% SELF MADE COMMANDS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=section]{mmdfn}{Definition}
+{%
+	enhanced
+	,breakable
+	,colback = myb!10
+	,frame hidden
+	,boxrule = 0sp
+	,borderline west = {2pt}{0pt}{myb}
+	,sharp corners
+	,detach title
+	,before upper = \tcbtitle\par\smallskip
+	,coltitle = myb!85!black
+	,fonttitle = \bfseries\sffamily
+	,description font = \mdseries
+	,separator sign none
+	,segmentation style={solid, myb!85!black}
+}
+{th}
+
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=section]{mmmany}{}
+{%
+	enhanced,
+	breakable,
+	colback = mypropbg,
+	frame hidden,
+	boxrule = 0sp,
+	borderline west = {2pt}{0pt}{myr},
+	sharp corners,
+	detach title,
+	before upper = \tcbtitle\par\smallskip,
+	coltitle = myr,
+	fonttitle = \bfseries\sffamily,
+	description font = \mdseries,
+	separator sign none,
+	segmentation style={solid, myr},
+}
+{th}
+
+\tcbuselibrary{theorems,skins,hooks}
+\newtcbtheorem[number within=section]{Subquestion}{Subquestion}
+{%
+  enhanced,
+  breakable,
+  colback = mytheorembg,
+  frame hidden,
+  boxrule = 0sp,
+  borderline west = {2pt}{0pt}{mytheoremfr},
+  sharp corners,
+  detach title,
+  before upper = \tcbtitle\par\smallskip,
+  coltitle = mytheoremfr,
+  fonttitle = \bfseries\sffamily,
+  description font = \mdseries,
+  separator sign none,
+  segmentation style={solid, mytheoremfr},
+}
+{th}
+
+\newcounter{mylabelcounter}
+
+\makeatletter
+\newcommand{\setword}[2]{%
+	\phantomsection
+	#1\def\@currentlabel{\unexpanded{#1}}\label{#2}%
+}
+\makeatother
+
+\tikzset{
+	symbol/.style={
+			draw=none,
+			every to/.append style={
+					edge node={node [sloped, allow upside down, auto=false]{$#1$}}}
+		}
 }
 
-\renewcommand{\b}[1]{\ifmmode\mathbf{#1}\else\textbf{#1}\fi}
-\newcommand{\im}{\operatorname{im}}
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% % TABLE OF CONTENTS
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\definecolor{doc}{RGB}{0,60,110}
+\contentsmargin{0cm}
+\titlecontents{chapter}[3.7pc]
+{\addvspace{30pt}%
+	\begin{tikzpicture}[remember picture, overlay]%
+		\draw[fill=doc!60,draw=doc!60] (-7,-.1) rectangle (-0.9,.5);%
+		\pgftext[left,x=-3.5cm,y=0.2cm]{\color{white}\Large\sc\bfseries Chapter\ \thecontentslabel};%
+	\end{tikzpicture}\color{doc!60}\large\sc\bfseries}%
+{}
+{}
+{\;\titlerule\;\large\sc\bfseries Page \thecontentspage
+	\begin{tikzpicture}[remember picture, overlay]
+		\draw[fill=doc!60,draw=doc!60] (2pt,0) rectangle (4,0.1pt);
+	\end{tikzpicture}}%
+\titlecontents{section}[3.7pc]
+{\addvspace{2pt}}
+{\contentslabel[\thecontentslabel]{2pc}}
+{}
+{\hfill\small \thecontentspage}
+[]
+\titlecontents*{subsection}[3.7pc]
+{\addvspace{-1pt}\small}
+{}
+{}
+{\ --- \small\thecontentspage}
+[ \textbullet\ ][]
+
+\makeatletter
+\renewcommand{\tableofcontents}{%
+	\chapter*{%
+	  \vspace*{-20\p@}%
+	  \begin{tikzpicture}[remember picture, overlay]%
+		  \pgftext[right,x=15cm,y=0.2cm]{\color{doc!60}\Huge\sc\bfseries \contentsname};%
+		  \draw[fill=doc!60,draw=doc!60] (13,-.75) rectangle (20,1);%
+		  \clip (13,-.75) rectangle (20,1);
+		  \pgftext[right,x=15cm,y=0.2cm]{\color{white}\Huge\sc\bfseries \contentsname};%
+	  \end{tikzpicture}}%
+	\@starttoc{toc}}
+\makeatother
+
+
+}{% Optional: Code to execute if report is NOT loaded 
+}
+
+
+%----- End -----
+\makeatother % Revert @ commands
